--- a/WindowExplorer/Sources/Controllers/SearchViewController/Views/SearchItemView.xib
+++ b/WindowExplorer/Sources/Controllers/SearchViewController/Views/SearchItemView.xib
@@ -7,6 +7,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="SearchItemView" customModule="WindowExplorer" customModuleProvider="target">
             <connections>
+                <outlet property="attributionTextField" destination="aRF-4l-VWg" id="0K2-WL-kvp"/>
                 <outlet property="spinner" destination="96G-nx-k16" id="6Su-Ag-5BE"/>
                 <outlet property="titleTextField" destination="SNb-xw-cHU" id="2LH-Dy-db9"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
@@ -18,26 +19,37 @@
             <rect key="frame" x="0.0" y="0.0" width="300" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
+                <progressIndicator hidden="YES" wantsLayer="YES" horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" bezeled="NO" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="96G-nx-k16">
+                    <rect key="frame" x="142" y="27" width="16" height="16"/>
+                </progressIndicator>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="aRF-4l-VWg">
+                    <rect key="frame" x="256" y="26" width="26" height="17"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="(0)" id="5Vs-uk-noK">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="SNb-xw-cHU">
-                    <rect key="frame" x="18" y="26" width="264" height="17"/>
+                    <rect key="frame" x="130" y="26" width="41" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Label" id="rbD-zf-e0H">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <progressIndicator hidden="YES" wantsLayer="YES" horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" bezeled="NO" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="96G-nx-k16">
-                    <rect key="frame" x="142" y="27" width="16" height="16"/>
-                </progressIndicator>
             </subviews>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="SNb-xw-cHU" secondAttribute="trailing" constant="20" id="i1c-4V-PHK"/>
+                <constraint firstItem="SNb-xw-cHU" firstAttribute="centerX" secondItem="Hz6-mo-xeY" secondAttribute="centerX" id="53n-01-se1"/>
+                <constraint firstItem="aRF-4l-VWg" firstAttribute="centerY" secondItem="SNb-xw-cHU" secondAttribute="centerY" id="6t4-b5-P7O"/>
+                <constraint firstAttribute="trailing" secondItem="aRF-4l-VWg" secondAttribute="trailing" constant="20" id="CSH-bx-muI"/>
+                <constraint firstItem="aRF-4l-VWg" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="SNb-xw-cHU" secondAttribute="trailing" constant="8" id="eFC-qN-Zx1"/>
                 <constraint firstItem="96G-nx-k16" firstAttribute="centerX" secondItem="Hz6-mo-xeY" secondAttribute="centerX" id="iYJ-IS-cgp"/>
                 <constraint firstItem="96G-nx-k16" firstAttribute="centerY" secondItem="Hz6-mo-xeY" secondAttribute="centerY" id="pYp-n3-RRt"/>
                 <constraint firstItem="SNb-xw-cHU" firstAttribute="centerY" secondItem="Hz6-mo-xeY" secondAttribute="centerY" id="slB-d3-q3T"/>
-                <constraint firstItem="SNb-xw-cHU" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="wKi-VZ-Ywz"/>
+                <constraint firstItem="SNb-xw-cHU" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="wKi-VZ-Ywz"/>
             </constraints>
-            <point key="canvasLocation" x="48.5" y="77"/>
+            <point key="canvasLocation" x="48" y="77"/>
         </customView>
         <customObject id="MCE-8p-YXI" customClass="SearchItemView" customModule="WindowExplorer" customModuleProvider="target"/>
     </objects>
