--- a/WindowExplorer/Sources/Controllers/RecordViewController/Record.storyboard
+++ b/WindowExplorer/Sources/Controllers/RecordViewController/Record.storyboard
@@ -111,10 +111,10 @@
                                         </scroller>
                                     </scrollView>
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="EXh-d9-a5i">
-                                        <rect key="frame" x="2" y="0.0" width="412" height="20"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="20"/>
                                         <subviews>
                                             <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VQM-S5-OoI">
-                                                <rect key="frame" x="198" y="2" width="17" height="17"/>
+                                                <rect key="frame" x="199" y="2" width="17" height="17"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="17" id="Kcm-4v-8zt"/>
                                                     <constraint firstAttribute="width" constant="17" id="SxH-HT-MfA"/>
@@ -170,7 +170,7 @@
                                         </scroller>
                                     </scrollView>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bUk-IU-mgC">
-                                        <rect key="frame" x="376" y="560" width="30" height="30"/>
+                                        <rect key="frame" x="376" y="570" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="kZg-Qm-H9m"/>
                                             <constraint firstAttribute="width" constant="30" id="o9G-Xk-LdZ"/>
@@ -183,12 +183,14 @@
                                     <constraint firstAttribute="trailing" secondItem="FBg-bp-lkB" secondAttribute="trailing" constant="2" id="3e3-h1-L7H"/>
                                     <constraint firstItem="FBg-bp-lkB" firstAttribute="top" secondItem="Eaz-7m-IDm" secondAttribute="bottom" constant="25" id="8vh-Mt-Z9V"/>
                                     <constraint firstItem="ufY-Kg-vBR" firstAttribute="leading" secondItem="83q-cx-wcX" secondAttribute="leading" id="CBg-hb-EdH"/>
+                                    <constraint firstItem="EXh-d9-a5i" firstAttribute="leading" secondItem="83q-cx-wcX" secondAttribute="leading" id="DHI-n9-NJQ"/>
                                     <constraint firstItem="Zeo-g9-VHC" firstAttribute="centerY" secondItem="ufY-Kg-vBR" secondAttribute="centerY" id="EcY-KO-d8G"/>
-                                    <constraint firstAttribute="trailing" secondItem="bUk-IU-mgC" secondAttribute="trailing" constant="10" id="dWQ-cx-ayu"/>
                                     <constraint firstAttribute="bottom" secondItem="EXh-d9-a5i" secondAttribute="bottom" id="Tce-Fg-eCQ"/>
+                                    <constraint firstAttribute="trailing" secondItem="bUk-IU-mgC" secondAttribute="trailing" constant="10" id="dWQ-cx-ayu"/>
                                     <constraint firstItem="Zeo-g9-VHC" firstAttribute="centerX" secondItem="ufY-Kg-vBR" secondAttribute="centerX" id="e06-73-OD5"/>
                                     <constraint firstItem="FBg-bp-lkB" firstAttribute="leading" secondItem="83q-cx-wcX" secondAttribute="leading" id="fiA-kL-6Ij"/>
                                     <constraint firstAttribute="width" constant="416" id="gCO-Bx-Eu3"/>
+                                    <constraint firstAttribute="trailing" secondItem="EXh-d9-a5i" secondAttribute="trailing" constant="2" id="gNf-II-it3"/>
                                     <constraint firstAttribute="trailing" secondItem="ufY-Kg-vBR" secondAttribute="trailing" id="isU-1a-I8R"/>
                                     <constraint firstItem="ufY-Kg-vBR" firstAttribute="top" secondItem="83q-cx-wcX" secondAttribute="top" constant="40" id="ktu-Si-a2l"/>
                                     <constraint firstItem="bUk-IU-mgC" firstAttribute="top" secondItem="83q-cx-wcX" secondAttribute="top" constant="50" id="mU4-gf-iwB"/>
@@ -329,7 +331,7 @@
     </scenes>
     <resources>
         <image name="close button" width="15" height="15"/>
-        <image name="expand_arrow" width="22" height="24"/>
         <image name="down_arrow_indicator" width="31" height="11"/>
+        <image name="expand_arrow" width="22" height="24"/>
     </resources>
 </document>
