--- a/WindowExplorer/Sources/Controllers/SearchViewController/Search.storyboard
+++ b/WindowExplorer/Sources/Controllers/SearchViewController/Search.storyboard
@@ -42,8 +42,8 @@
                                     <rect key="frame" x="-100" y="-100" width="327" height="16"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
-                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="eAn-f2-EUL">
-                                    <rect key="frame" x="334" y="0.0" width="16" height="510"/>
+                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="eAn-f2-EUL">
+                                    <rect key="frame" x="-100" y="-100" width="16" height="505"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                             </scrollView>
@@ -149,18 +149,18 @@
                                             <constraint firstAttribute="height" constant="30" id="3NA-oG-NTh"/>
                                         </constraints>
                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="left" title="Search" usesSingleLineMode="YES" id="4y5-u6-SCI">
-                                            <font key="font" metaFont="system" size="16"/>
+                                            <font key="font" size="16" name="Soleil"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
                                     </textField>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jVk-aJ-U1i">
-                                        <rect key="frame" x="482" y="0.0" width="96" height="30"/>
+                                        <rect key="frame" x="480" y="0.0" width="100" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="DEF-wn-DqX"/>
                                         </constraints>
                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="left" title="Intermediate" usesSingleLineMode="YES" id="vBN-FT-xiU">
-                                            <font key="font" metaFont="system" size="16"/>
+                                            <font key="font" size="16" name="Soleil"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
@@ -171,7 +171,7 @@
                                             <constraint firstAttribute="height" constant="30" id="AUr-cF-0qr"/>
                                         </constraints>
                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="left" title="Results" usesSingleLineMode="YES" id="8B2-Mi-XEU">
-                                            <font key="font" metaFont="system" size="16"/>
+                                            <font key="font" size="16" name="Soleil"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
